Updates for searching for institutional collections, started working on creating group workspaces.